# CPP-STLC

./: .gitignore  CMakeLists.txt  README.md  lldb_formatters.py  main.cpp  utils.h
.github/workflows/: ci.yml  testing.yml
exceptions/: Exceptions.cpp  Exceptions.h
models/: Terms.cpp  Terms.h  Type.cpp  Type.h  TypingContext.cpp  TypingContext.h  lambda.h
models/terms/: Abstraction.cpp  Abstraction.h  Application.cpp  Application.h  Variable.cpp  Variable.h
terms/: Abstraction.cpp  Abstraction.h  Application.cpp  Application.h  Terms.cpp  Terms.h  Variable.cpp  Variable.h
tests/: test_abstraction.cpp  test_application.cpp  test_types_and_exceptions.cpp  test_variable.cpp
